# kellton-01-doc-chat

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  SETUP.md  setup.sh  start.sh
backend/: .gitignore  README.md  pyproject.toml  run.py  run_migrations.py
backend/migrations/: 001_consolidate_collections.py  __init__.py
backend/src/backend/: __init__.py  app.py  config.py
backend/src/backend/api/: __init__.py  auth.py  conversations.py  documents.py  settings.py  websocket.py
backend/src/backend/auth/: __init__.py  middleware.py  session.py
backend/src/backend/db/: __init__.py  migrations.py  models.py
backend/src/backend/storage/: __init__.py  file_manager.py
backend/src/backend/store/: __init__.py  chroma_client.py  embeddings.py  legacy.py  search.py
backend/src/backend/utils/: __init__.py  encryption.py  llm_providers.py
interface/: .gitignore  next.config.ts  package.json  pnpm-lock.yaml
interface/src/app/: globals.css  layout.tsx  page.tsx
interface/src/app/home/: page.tsx
interface/src/components/: ChatArea.tsx  ConversationList.tsx  DocumentList.tsx  DocumentUpload.tsx  DocumentViewer.tsx  LoginForm.tsx  MessageBubble.tsx  ModelSelector.tsx  SettingsDialog.tsx  Sidebar.tsx
interface/src/components/ui/: resizable.tsx
interface/src/context/: AuthContext.tsx  ChatContext.tsx  WebSocketContext.tsx
interface/src/lib/: axios.ts
interface/src/util/: api.ts
plans/: 01_rag_collection_restructure.md  02_conversation_memory.md  03_production_readiness_fixes.md
